# django_facilito_store

./: .gitignore  README.md  pyproject.toml
src/facilito_store/: db.sqlite3
src/facilito_store/facilito_store/: urls.py  views.py
src/facilito_store/static/css/: style.css
src/facilito_store/templates/: index.html
src/facilito_store/templates/users/: login.html
