[project]
name = "django-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Andrés Forero Guaitero",email = "kevinandresforero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)"
]

[tool.poetry]
packages = [{include = "django_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
